# nbody_memory_layout_student_project

./: .gitignore  README.md
cpp/: CMakeList.txt  CMakeLists.txt
cuda/: CMakeLists.txt  array_of_struct_of_arrays.cu  array_of_structs.cu  compilescript  main.cu  shared_header.h  struct_of_arrays.cu
cuda/Analyse/: 128-1070.nvvp  128-v100.nvvp  16-1070.nvvp  16-k80.nvvp  16-v100.nvvp
presentation_latex/: current_results.txt  hpgpu-project-presentation.tex  preamble.tex  results_1070.txt  results_K80.txt  results_rtx_2080.txt  results_v100.txt
presentation_latex/figures/: fig1.tex  fig10.tex  fig100.tex  fig1000.tex  fig2.tex  fig20.tex  fig200.tex  fig2000.tex  fig3.tex  fig30.tex  fig300.tex  fig3000.tex  fig4.tex  fig40.tex  fig400.tex  fig4000.tex  fig50.tex
s1481568@taurus.hrsk.tu-dresden.de/project/: array_of_structs.cu  main.cu  struct_of_arrays.cu
